[package]
name = "value-plotter"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
eframe = "0.22.0"
png = "0.17.9"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
